# speed-accuracy-optimal-control-paper

./: .gitignore  README.txt  links.md  opensim-core-linux-build-script.sh
SOC_PAPER_REACHING/: animate_trajectory.m  demo.m  forwardMusculoskeletalDynamics_motorNoise.m  generateFunctions.m  initializeModelParameters.m  optimization_6muscles.m
SOC_PAPER_REACHING/6muscle_control/: OCP_6muscles_FF_FB_final.m  compareShootingvsDC_6muscles.m  demo.m  generateFunctions.m  generateFunctions_OCP_6muscles_FF_FB.m  initializeModelParameters.m  optimization_6muscles.m
SOC_PAPER_REACHING/6muscle_control/stochasticForwardSim/: forwardSim_no_fb.m
SOC_PAPER_REACHING/MusculoskeletalDynamics/: forwardMusculoskeletalDynamics_motorNoise.m
SOC_PAPER_REACHING/OCP/Stochastic/4muscles/: runExample.m
SOC_PAPER_REACHING/OCP/Stochastic/6muscles/: compareShootingvsDC_6muscles.m
SOC_PAPER_REACHING/forwardSim/: forwardSim_no_fb.m  forwardSim_ode.m  main_stochasticForwardSim.m
SOC_PAPER_REACHING/plotFunctions/: error_ellipse.m  plotNormalizedVelocity.m  plotResults.m
UE_source_code/: ArmController.cpp  ArmController.h  CMAOptimizer.cpp  CMAOptimizer.h  CMakeLists.txt  CMakeListsExample.txt  MOBL_ARMS_fixed_41.osim  OptSystem.cpp  OptSystem.h  TrajOpt.cpp  TrajOpt.h  ue_rigid.osim
proposal/: proposal.fdb_latexmk  proposal.tex
reports/: egbib.bib  final_report.out  final_report.tex  notes.tex  progress_report.tex  proposal.tex
speedaccuracy_results/: CorrelationsWithExperimentalData.rtf  estimate_velocity.m  read_time.m
src/: covariance_mpc.m  demo.m  distributions_test.m  draw_arm.m  dynamics.py  feasibility1.mat  feasibility_analysis.m  fitts_law_collection.m  fitts_law_collection_single.m  fitts_law_ethan_real_mpc_100.mat  fitts_law_ethan_real_single.mat  fitts_law_ethan_real_single_100.mat  fitts_law_mpc_compare.mat  fitts_law_trials.mat  generateFunctions.m  good_fitts_law_trials.mat  ik_opt.m  initializeModelParameters.m  main.py  mpc.m  mpc_demo.m  nonlinear_mpc.m  optimization_6muscles.m  parameters.py  planar_arm_trajectory.avi  receding_mpc.m  sigma_test.m  unscented_transform_example.m
src/Integrator/: DG_DW_Trapezoidal.m
src/forwardSim/: approximateForwardSim.m  forwardSim_no_fb.m  forwardSim_ode.m
src/linear_mpc/: covariance_constraint.m  covariance_constraint_pw.m  covariance_mpc.m  mpc.m  mpc_demo.m  scaled_sigma_w.m
src/plotFunctions/: animate_trajectory.m  plotNormalizedVelocity.m  plotResults.m
